addons/prometheus-operator/cert-manager/resources/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-ingress
  labels:
    app.kubernetes.io/name: allow-monitoring-ingress
    app.kubernetes.io/instance: allow-monitoring-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ""
    ports:
    - port: 9402
      protocol: TCP
